# autolanding

./: README.md  gt_LQR_control_example.slx  gt_PI_control_example.slx
RL_env_topic_publisher/: CMakeLists.txt  package.xml
RL_env_topic_publisher/launch/: topic_publisher.launch
RL_env_topic_publisher/src/: RL_env_topic_publisher.cpp  RL_gt_publisher.cpp
aruco_ros/aruco_ros/include/aruco_ros/: aruco_ros_utils.h
aruco_ros/aruco_ros/launch/: multi_marker.launch  multi_marker_cam1.launch  multi_marker_cam2.launch  sim_cam1.launch  sim_cam1_new.launch  sim_cam2.launch  ss.launch
aruco_ros/aruco_ros/src/: aruco_ros_utils.cpp  simple_single.cpp
pad_auto_controller/: CMakeLists.txt  package.xml
pad_auto_controller/launch/: pad_auto_controller.launch
pad_auto_controller/src/: pad_auto_controller.cpp
